<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mini-Projet</string>
    <string name="s_enregistrer">S\'enregistrer</string>
    <string name="se_connecter">Se connecter</string>
    <string name="my_money_controller">My Money Controller</string>
    <string name="textdescription">My Money Controller aide les gens à gérer leurs finances.</string>
    <string name="email">Adresse Email</string>
    <string name="nom">Nom Complet</string>
    <string name="motdepasse">Mot de passe</string>
    <string name="vous_etes">Vous êtes:</string>
    <string name="salarie">Salarié</string>
    <string name="vos_depenses">Vos dépenses:</string>
    <string name="selectionner">--Selectionner vos depenses--</string>
    <string name="selectionner2">--Selectionner vos ressources--</string>
    <string name="salaire">Salaire</string>
    <string name="bourse">Bourse</string>
    <string name="autres">Autres</string>
    <string name="xxx_xxx">xxx.xxx</string>
    <string name="somme">Somme:</string>
    <string name="maison">Maison</string>
    <string name="food">Food</string>
    <string name="telephone">Telephone</string>
    <string name="somme_depenses">somme Depenses</string>

</resources>
