<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".S_enregistrer">

    <Button
        android:id="@+id/buttonSenregistrer"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_format"
        android:hint="@string/s_enregistrer"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"
        tools:ignore="HardcodedText,MissingConstraints" />

    <ImageView
        android:id="@+id/image11"
        android:layout_width="50dp"
        android:layout_height="32dp"
        app:srcCompat="@drawable/icon_ionic_ios_arrow_back"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="22dp" />

    <TextView
        android:id="@+id/textViewSeConnecter"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:text="S'enregistrer"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <ImageView
        android:id="@+id/image5"
        android:layout_width="75dp"
        android:layout_height="53dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSenregistrer"
        app:srcCompat="@drawable/logo_app"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_money_controller"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image5"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/editTextNomComplet"
        android:layout_width="295dp"
        android:layout_height="49dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/button_format2"
        android:ems="10"
        android:hint="@string/nom"
        android:inputType="text"
        android:paddingLeft="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="295dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_format2"
        android:ems="10"
        android:hint="@string/motdepasse"
        android:inputType="textPassword"
        android:paddingLeft="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="295dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_format2"
        android:ems="10"
        android:hint="Confirmer le mot de passe"
        android:inputType="textPassword"
        android:paddingLeft="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="295dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_format2"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomComplet" />


</androidx.constraintlayout.widget.ConstraintLayout>